--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Population Growth</title>
     <style>
-       
+        body{
+            zoom: 50%;
+        }
         * {
             margin: 0;
             padding: 0;
-            zoom: 50%;
         }
 
         .nav {
