--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         .nav {
             background-color: white;
-            height: 6vh;
+            height: 10%;
             width: 100%;
             margin: auto;
             /* border: 2px solid red; */
@@ -42,9 +42,10 @@
         }
 
         .section1 {
+            
             position: absolute;
-            margin-top: 9rem;
-            margin-left: 22.5rem;
+            margin-top: 12vh;
+            margin-left: 10vw;
             box-shadow: 0px 9px rgb(72, 72, 72);
         }
 
@@ -80,8 +81,8 @@
 
         .section2 {
             position: relative;
-            top: 20rem;
-            margin-left: 21rem;
+            top: 20vh;
+            margin-left: 10vh;
 
         }
 
@@ -111,14 +112,14 @@
 
         .section3 {
             position: relative;
-            top: 19rem;
+            top: 19vh;
             /* border: 2px solid; */
             width: 155vh;
-            left: 22rem;
+            left: 10vh;
             height: auto;
-            font-size: 3rem;
+            font-size: 2rem;
             font-family: ui-sans-serif;
-            text-indent: 9rem;
+            text-indent: 4rem;
         }
 
         .footer {
