--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Population Growth</title>
     <style>
-
         * {
             margin: 0;
             padding: 0;
@@ -14,7 +13,7 @@
 
         .nav {
             background-color: white;
-            height: 10%;
+            height: 6vh;
             width: 100%;
             margin: auto;
             /* border: 2px solid red; */
@@ -31,9 +30,8 @@
 
         .nav-li {
             list-style: none;
-            font-size: 2.5rem;
-            margin-top: 1.5rem;
-            padding: 0px 2rem;
+            font-size: 2rem;
+            padding: 3px 1rem;
         }
 
         .logo {
@@ -42,37 +40,38 @@
         }
 
         .section1 {
-            
             position: absolute;
-            margin-top: 12vh;
-            margin-left: 10vw;
+            margin-top: 4.5rem;
+            margin-left: 2.4rem;
             box-shadow: 0px 9px rgb(72, 72, 72);
         }
 
         .sec1-li1 {
             list-style: none;
-            font-size: 4rem;
+            font-size: 1.8rem;
+            padding-top: 11px;
             font-family: ui-sans-serif;
             font-weight: 800;
         }
 
         .sec1-li2 {
             list-style: none;
-            font-size: 3rem;
+            font-size: 1.8rem;
+            padding-top: 11px;
             font-family: ui-sans-serif;
             font-weight: 800;
-            margin: 2rem 0rem;
+
         }
 
         .danda {
             list-style: none;
-            font-size: 9.5rem;
-            font-weight: 400;
-            margin: -1.5rem 2rem;
+            font-size: 3.5rem;
+            font-weight: 500;
+            margin: -0.5rem 1rem;
         }
 
         .right {
-            margin-left: 43rem;
+            margin-left: 29rem;
         }
 
         .left li:last-child {
@@ -81,21 +80,20 @@
 
         .section2 {
             position: relative;
-            top: 20vh;
-            margin-left: 10vh;
-
+            top: 7rem;
+            margin-left: 3rem;
         }
 
         .sec2-li {
-            font-size: 3rem;
+            font-size: 1.8rem;
             border: 2px solid;
-            margin: 5rem -2rem;
+            margin: 4rem -0.79rem;
             list-style: none;
             background: rgb(77, 77, 77);
             color: white;
-            padding: 2rem 4rem 2rem 1rem;
-            width: 28rem;
-            height: 3rem;
+            padding: 2rem;
+            width: 15rem;
+            height: 0rem;
             align-items: center;
             justify-content: center;
         }
@@ -112,31 +110,31 @@
 
         .section3 {
             position: relative;
-            top: 19vh;
+            top: 6rem;
             /* border: 2px solid; */
-            width: 155vh;
-            left: 10vh;
+            width: 174vh;
+            left: 6rem;
             height: auto;
-            font-size: 2rem;
+            font-size: 1.5rem;
             font-family: ui-sans-serif;
-            text-indent: 4rem;
+            text-indent: 3rem;
         }
 
         .footer {
             /* border: 2px solid; */
-            width: 189rem;
-            height: 7rem;
+            width: 94.92rem;
+            height: 4rem;
             justify-content: space-around;
-            top: 22rem;
+            top: 7.5rem;
             /* color: red; */
             position: relative;
             box-shadow: -1px -6px rgb(48, 171, 247);
         }
 
         .ft-li {
-            font-size: 3rem;
+            font-size: 2rem;
             list-style: none;
-            margin: 2rem 0.5rem;
+            margin: 0.65rem 0.5rem;
         }
 
         .ft-li:hover {
@@ -145,9 +143,9 @@
         }
 
         .ft-danda {
-            font-size: 4rem;
+            font-size: 2.5rem;
             list-style: none;
-            margin: 17px 0px;
+            margin: 1px 0px;
             font-weight: 600;
 
         }
@@ -166,9 +164,11 @@
         <div class="flex">
             <div class="left">
                 <ul class="flex sec2">
-                    <img style="width: 146px;margin-bottom: 41px; margin-right: 15px" class="Img" src="pop.png"
-                        alt="Logo">
-                    <li class="sec1-li1">&nbsp;&nbsp;&nbsp;Earth<br>Population</li>
+                    <img style="width: 50px;
+                    height: 3rem;
+                    padding-bottom: 13px;
+                    padding-right: 8px;" class="Img" src="pop.png" alt="Logo">
+                    <li class="sec1-li1">Earth Population</li>
                     <li class="danda">|</li>
                     <li class="sec1-li2">Population Division</li>
                 </ul>
@@ -198,8 +198,8 @@
     <section class="section3">
         <div class="1">
             <p>
-                <img style="float: inline-end;   height: 49rem;    padding: 1rem;border: 12px solid rgb(48, 171, 247);margin: 17px;"
-                    src="img1.png" alt="Img">
+                <img style="float: inline-end;      height: 24rem;
+                padding: 1rem;border: 12px solid rgb(48, 171, 247);margin: 17px;" src="img1.png" alt="Img">
                 In world demographics, the world population is the total number of humans currently living. It was
                 estimated
                 by the United Nations to have exceeded eight billion in mid-November 2022. It took around 300,000 years
@@ -245,10 +245,13 @@
         </div>
         <div>
             <h2
-                style="border: 7px solid black;height: 89px;width: 100rem;margin-left: 23rem;background: rgb(77, 77,77);color: white;text-shadow: 1px 3px 2px rgb(48, 171, 247);">
+                style="border: 7px solid black;    height: 48px;
+                width: 47rem;
+                margin-left: 16rem;background: rgb(77, 77,77);color: white;text-shadow: 1px 3px 2px rgb(48, 171, 247);">
                 How population growth impacts the planet</h2>
-            <video style="border: 11px solid rgb(48, 171, 247);height: 1003px;margin: 97px ;margin-left: 17rem;"
-                autoplay muted controls>
+            <video style="border: 11px solid rgb(48, 171, 247);    height: 30rem;
+            margin-top: 12px;
+            margin-left: 12.4rem;" autoplay muted controls>
                 <source src="videos.mp4" type="video/mp4">
             </video>
         </div>
@@ -256,13 +259,17 @@
             <h2>History</h2>
             <hr><br>
             <p>
-                <img style="float: inline-end;   height: 49rem;    padding: 1rem;border: 12px solid rgb(48, 171, 247);margin: 17px;"
-                    src="img2.png" alt="Img">
+                <img style="float: inline-end;
+                height: 28rem;
+                padding: 1rem;
+                border: 12px solid rgb(48, 171, 247);
+                margin: 5px;" src="img2.png" alt="Img">
                 It is difficult for estimates to be better than rough approximations, as even current population
                 estimates
-                are fraught with uncertainties from 3% to 5%.<br>
-            <h4>Ancient and post-classical history</h4>
-            Estimates of the population of the world at the time agriculture emerged in around 10,000 BC have ranged
+                are fraught with uncertainties from 3% to 5%.<br><br>
+            <h3 style="margin-left: -46px;margin-bottom: 11px;">Ancient and post-classical history</h3>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Estimates of the population of the world at the time
+            agriculture emerged in around 10,000 BC have ranged
             between 1 million and 15 million.Even earlier, genetic evidence suggests humans may have gone
             through a population bottleneck of between 1,000 and 10,000 people about 70,000 BC, according to the now
             largely discredited Toba catastrophe theory. By contrast, it is estimated that around 50–60 million
@@ -319,8 +326,11 @@
             <h2>Modern history</h2>
             <hr><br>
             <p>
-                <img style="float: inline-end;   height: 40rem;    padding: 1rem;border: 12px solid rgb(48, 171, 247);margin: 17px;"
-                    src="img3.png" alt="Img">
+                <img style="float: inline-end;height: 19rem;
+                padding: 1rem;
+                border: 12px solid rgb(48, 171, 247);
+                margin: 2px;
+            " src="img3.png" alt="Img">
                 During the European Agricultural and Industrial Revolutions, the life expectancy of children increased
                 dramatically.The percentage of the children born in London who died before the age of five decreased
                 from 74.5% in 1730–1749 to 31.8% in 1810–1829.Between 1700 and 1900, Europe's population increased from
@@ -357,8 +367,11 @@
             <br>
             <h2>Milestones by the billions</h2>
             <hr><br>
-            <img style="float: inline-end;   height: 10rem;    padding: 1rem;border: 12px solid rgb(48, 171, 247);margin: 17px;"
-                src="img4.png" alt="Img">
+            <img style="    float: inline-end;
+            height: 6.8rem;
+            padding: 1rem;
+            border: 12px solid rgb(48, 171, 247);
+            margin: 7px;" src="img4.png" alt="Img">
             <p>The UN estimated that the world population reached one billion for the first time in 1804. It was another
                 123 years before it reached two billion in 1927, but it took only 33 years to reach three billion in
                 1960.Thereafter, it took 14 years for the global population to reach four billion in 1974, 13 years to
@@ -388,8 +401,10 @@
         <div><br>
             <h2 id="pop-div">Global demographics</h2>
             <hr><br>
-            <img style="float: inline-end;   height: 50rem;    padding: 1rem;border: 12px solid rgb(48, 171, 247);margin: 17px;"
-                src="img5.png" alt="Img">
+            <img style="float: inline-end;height: 25rem;
+            padding: 1rem;
+            border: 12px solid rgb(48, 171, 247);
+            margin: 3px;" src="img5.png" alt="Img">
             <p>As of 2020, the global sex ratio is approximately 1.01 males to 1 female.Approximately 26.3% of the
                 global population is aged under 15, while 65.9% is aged 15–64 and 7.9% is aged 65 or over.The median age
                 of the world's population is estimated to be 31 years in 2020, and is expected to rise to 37.9 years by
@@ -431,16 +446,24 @@
                 Oceania, the least populated region, has about 42 million inhabitants (0.5%).Antarctica only has a very
                 small, fluctuating population of about 1200 people based mainly in polar science stations.
 
-                <img style="float: inline-start;     height: 35rem; padding: 1rem;border: 12px solid rgb(48, 171, 247);margin: 17px; margin-top: 12rem;"
-                    src="img6.png" alt="Img">
-                <img style="float: inline-end;   height: 50rem;    padding: 1rem;border: 12px solid rgb(48, 171, 247);margin: 18px;"
-                    src="img7.png" alt="Img">
+                <img style="float: inline-start;
+                height: 24rem;
+                width: 33.5rem;
+                padding: 1rem;
+                border: 12px solid rgb(48, 171, 247);
+                margin: 17px;" src="img6.png" alt="Img">
+                <img style="    float: inline-end;
+                height: 24rem;
+                width: 35rem;
+                padding: 1rem;
+                border: 12px solid rgb(48, 171, 247);
+                margin: 18px;" src="img7.png" alt="Img">
 
             </p>
         </div><br>
 
         <div><br>
-            <h2 style="margin-top: 100px;">Rate of increase in population Growth</h2>
+            <h2>Rate of increase in population Growth</h2>
             <hr><br>
             <p>The world's population is currently growing at a rate of around 0.88% per year, adding an estimated 70
                 million people annually. This represents a significant decline from the peak growth rate of 2% observed
@@ -468,27 +491,34 @@
                 increase in the coming decades. This will pose a number of challenges, but it will also present
                 opportunities for innovation and adaptation. <br><br>
 
-                <img src="popn.webp" alt="Image"
-                    style="height: 48rem;margin-left: 8rem;margin-top: 4rem;border: 12px solid rgb(48, 171, 247);">
+                <img src="popn.webp" alt="Image" style="    height: 26rem;
+                    margin-left: 5rem;
+                    border: 12px solid rgb(48, 171, 247);">
             </p>
         </div><br>
         <h2 id="graph">Rate of increase in population Growth</h2>
         <hr><br>
-        <div id="graph" style="display: grid;grid-template-rows: 1fr 1fr;grid-template-columns: 1fr 1fr;">
+        <div id="graph" style="    display: grid;
+        grid-template-rows: 30rem 30rem;
+        grid-template-columns: 40rem 40rem;">
             <div>
-                <img style="height: 63rem;width: 66.5rem; border: 12px solid rgb(48, 171, 247);" src="graph.jpeg" alt="graph1">
+                <img style="height: 27rem;width: 35rem; border: 12px solid rgb(48, 171, 247);" src="graph.jpeg"
+                    alt="graph1">
             </div>
 
             <div>
-                <img style="height: 63rem; border: 12px solid rgb(48, 171, 247);" src="graph4.jpeg" alt="graph4">
+                <img style="height: 27rem;width: 35rem; border: 12px solid rgb(48, 171, 247);" src="graph4.jpeg"
+                    alt="graph4">
             </div>
 
             <div>
-                <img style="margin-top: 6rem;height: 50rem; border: 12px solid rgb(48, 171, 247);" src="graph2.jpg" alt="graph2">
+                <img style="height: 27rem;width: 35rem; border: 12px solid rgb(48, 171, 247);" src="graph2.jpg"
+                    alt="graph2">
             </div>
 
             <div>
-                <img style="margin-top: 6rem;height: 50rem; width: 63.5rem; border: 12px solid rgb(48, 171, 247);" src="graph3.png" alt="graph3">
+                <img style="height: 27rem;width: 35rem; border: 12px solid rgb(48, 171, 247);" src="graph3.png"
+                    alt="graph3">
             </div>
 
 
@@ -497,7 +527,7 @@
 
     <footer class="footer flex">
         <div class="left-ft flex">
-            <p style="font-size: 4rem;margin: 1rem;">Earth Population</p>
+            <p style="font-size: 2rem;margin: 0.65rem;">Earth Population</p>
         </div>
 
         <div class="right flex">
